--- a/Readme
+++ b/Readme
@@ -1,4 +1,3 @@
-XPLORE-JOY
-Figma: Desktop Design | Mobile Designs
+Figma:  [Desktop Design](https://www.figma.com/file/RPo5kghsSwQnWWmF4kLgOX/XJ-Concept?node-id=1%3A3&t=zyHRUNwDe3uoGrY6-0)  |  [Mobile Designs](https://www.figma.com/file/RPo5kghsSwQnWWmF4kLgOX/XJ-Concept?node-id=1%3A2&t=TmQRel0lGgIGvLuP-0)  
 
-Website: https://xplore-joy.netlify.app/
+Website:  [https://xplore-joy.netlify.app/](https://xplore-joy.netlify.app/)
